--- a/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
+++ b/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
@@ -1,11 +1,11 @@
 <!--
 %\VignetteEngine{knitr}
-%\VignetteIndexEntry{Bar-Tailed Godwit FLightR analysis}
+%\VignetteIndexEntry{Black-Tailed Godwit FLightR analysis}
 %\VignetteDepends{FLightR}
 -->
-# Intigeo tag on a Bar tailed godwit analysis example
-# FLightR analysis
-This is a new workflow for FLightR>=0.4.2 based on the original Appendix A6 to 
+# FLightR analysis example of Black tailed godwit geolocator
+# 
+This is a FLightR>=0.4.2 example with the data from 
 Rakhimberdiev, E., Senner, N. R., Verhoeven, M. A., Winkler, D. W., Bouten, W. and Piersma T. 2016 Comparing inferences of solar geolocation data against high-precision GPS data: annual movements of a double-tagged Black-Tailed Godwit. - Journal of Avian Biology 47: 589-596.
 
 ## Install package
