typo corrected in workflow description - thanx Mo

--- a/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
+++ b/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
@@ -138,14 +138,14 @@ Now your results are saved in your work directory as an RData object.
 ## 6. Migration schedules
 
 We can extract departure arrival estimates from the results we have got. 
-First select grid points that are of interest. For example in the current data we are interested to figure out when our bird left the Netherlands. We will make  a boundary at 2&deg; latitude;
+First select grid points that are of interest. For example in the current data we are interested to figure out when our bird left the Netherlands. We will make  a boundary at 2&deg; longitude;
 ```{r, eval = F}
 Index<-which(Result$Spatial$Grid[,1]>(2))
 ```
 And now we estimate probabilities if being in the area for each twilight:
 ```{r, eval = F}
-Times.NL=find.times.distribution(Result,Index)
-Times.NL
+Arrivals.NL<-find.times.distribution(Result,Index)
+Arrivals.NL
 ```
 ## 7. Plotting the results
 
