--- a/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
+++ b/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
@@ -71,7 +71,7 @@ print(Calibration.periods)
 ```
 In this example, we have two calibration periods (in the same location), in the beginning and at the end of the track. This is a common case, as the birds are oftentimes recaptured at the same location, where they were tagged. 
 
-When multiple calibration locations are available, each of them has to be processed with the function `plot.slopes.by.location`.  In this case, in the ‘Calibration periods’ data frame, each row should refer to one calibration period. Compiling the data frame with multiple calibration locations, use `c()` also for the geographic coordinates (e. g., `lon=c(5.43, 6.00), lat=c(52.93,52.94)`).
+When multiple calibration locations are available, each of them has to be processed with the function `plot_slopes_by_location`.  In this case, in the ‘Calibration periods’ data frame, each row should refer to one calibration period. Compiling the data frame with multiple calibration locations, use `c()` also for the geographic coordinates (e. g., `lon=c(5.43, 6.00), lat=c(52.93,52.94)`).
 
 Using the created data frame with the calibration periods and locations and the object with light data and twilight events (Proc.data), we estimate calibration parameters for each of the periods and make a calibration object. This object will be used for the calculation of geographic positions later on.
 ```{r, eval = F}
@@ -83,7 +83,7 @@ When there are more than one calibration periods, the parameter `model.ageing` c
 For the data recorded by a deployed on an animal tag, the exact period of its stay in a known location is usually not known, but it can be estimated from the data. For this, we obtain and plot calibration slopes for sunsets and sunrises for every day of the tracking period, based on the assumption that the tag remained in the same calibration location all the time. 
 
 ```{r, eval = F}
-plot.slopes.by.location(Proc.data=Proc.data, location=c(5.43, 52.93))
+plot_slopes_by_location(Proc.data=Proc.data, location=c(5.43, 52.93))
 ```
 
 Looking at the plot, we can define the time periods, during which the tag really was in the calibration location (recall, that we assume that the tag remained in this location all the time). Because calibration slopes reflect the adequacy of the light level measured by the device, they vary little, in time and between sunsets and sunrises, as long as the tagged animal stays in the calibration location, but become clearly diverse, when it moves away from it. Both patterns are clearly distinguishable at the plot. 
@@ -158,14 +158,14 @@ map.FLightR.ggmap(Result)
 ### Plot lon lat graph
 ```{r, eval = F}
 
-plot.lon.lat(Result)
+plot_lon_lat(Result)
 ```
 
 ### Plot utilization distribution
 Plot space utilisation distribution for the wintering range 
 
 ```{r, eval = F}
-plot.util.distr(Result, 
+plot_util_distr(Result, 
     dates=data.frame(as.POSIXct('2013-12-01'), as.POSIXct('2014-01-31')),
     add.scale.bar=TRUE, percentiles=0.5)
 ```
