--- a/R/NEWS
+++ b/R/NEWS
@@ -16,3 +16,4 @@
 # ver. 0.3.9 no preestimated distances and angles - attempt to save memory on large spatial extents, new workflow
 # ver. 0.4.0 solving dateline isssues for ploitting
 # ver 0.4.4 many changes, all tests, helpfiles, ready for CRAN submission
+# ver 0.4.5 corrected mistakes in check submitted to CRAN
