--- a/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
+++ b/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
@@ -50,7 +50,7 @@ Proc.data<-get.tags.data("example_TAGS_format.csv")
  
 ## 2. Calibration
 
-All geolocators measure light levels with different precision, and calibration is needed to find the relationship between the measured and real light levels for each device. This relationship is depicted by the calibration parameters (slopes), which are calculated based on the data recorded in known (calibration) locations.  Such locations can be the ones, where the animal was tagged, recaptured or observed. FLightR works with so-called template fit observational model [Ekstrom 2004, 2007](#Ekstrom_2004). This model compares log of light irradiance measured at location with log of irradiance expected there according to astronomical position of the sun [Rakhimberdiev et al. 2015](#rakhimberdiev_movecol_2015). The calibration parameters are based on the data recorded during calibration periods. To define these periods, user needs to create a data frame in which geographic coordinates of the calibration location (usually, the location, where the tag was deployed on an animal), and start and end date of the calibration period are specified in the following columns:
+All geolocators measure light levels with different precision, and calibration is needed to find the relationship between the measured and real light levels for each device. This relationship is depicted by the calibration parameters (slopes), which are calculated based on the data recorded in known (calibration) locations.  Such locations can be the ones, where the animal was tagged, recaptured or observed. FLightR works with so-called template fit observational model [Ekstrom 2004, 2007](#ekstrom_2004). This model compares log of light irradiance measured at location with log of irradiance expected there according to astronomical position of the sun [Rakhimberdiev et al. 2015](#rakhimberdiev_movecol_2015). The calibration parameters are based on the data recorded during calibration periods. To define these periods, user needs to create a data frame in which geographic coordinates of the calibration location (usually, the location, where the tag was deployed on an animal), and start and end date of the calibration period are specified in the following columns:
 * `calibration.start` (POSIXct format)
 * `calibration.stop` (POSIXct format)
 * `lon` (numeric)
