--- a/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
+++ b/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
@@ -79,7 +79,7 @@ Calibration<-make.calibration(Proc.data, Calibration.periods)
 When there are more than one calibration periods, the parameter `model.ageing` can be set `TRUE` to account for tag ageing. In this case, the calibration parameters are calculated, based on the assumption that the calibration slope changes linearly (with time) between the calibration points. The obtained calibration object is further used for calculation of geographical positions.
 
 ### Find calibration periods for known calibration location
-For the data recorded by a deployed on an animal tag, the exact period of its stay in a known location is usually not known, but it can be estimated from the data. For this, we obtain and plot calibration slopes for sunsets and sunrises for every day of the tracking period, based on the assumption that the tag remained in the same calibration location all the time. 
+For the data recorded by a deployed on an animal tag, the exact period of its stay in a known location is usually not known, but it can be suggested from the data. For this, we obtain and plot calibration slopes for sunsets and sunrises for every day of the tracking period, based on the assumption that the tag remained in the same calibration location all the time. 
 
 ```{r, eval = F}
 plot_slopes_by_location(Proc.data=Proc.data, location=c(5.43, 52.93))
@@ -92,10 +92,11 @@ Play with `abline()` to find the proper boundaries for the calibration.
 abline(v=as.POSIXct("2013-08-20")) # end of first calibration period
 abline(v=as.POSIXct("2014-05-05")) # start of the second calibration period
 ```
-### Find calibration location for known calibration periods
+### Find calibration location for known calibration period
 When tagging happened in the High Arctic under polar day conditions or when bird moved away from the tagging site immedialtey after tagging and rood top calibration data are absent it is still possibe to obtain calibration parameters for a stationary period at unknown location. FLightR approach to this problem is similar to Hill-Ekstrom calibration [
-i et al. 2012](#lisovski_2012a) implemented in GeoLight [Lisovksi et al. 2012a](#Lisovski_2012b). If bird is assumed to be stationary at some period one can try:
-```{r}
+[Lisovski et al. 2012b](#lisovski_2012b) implemented in GeoLight [Lisovksi et al. 2012a](#Lisovski_2012b). If bird is assumed to be stationary at some period one can try:
+```{r, eval=FALSE}
+# ~ 15 min run time
 Location<-find.stationary.location(Proc.data, '2013-07-20', '2013-08-20', initial.coords=c(10, 50))
 ```
 Function will return coordinates of location for which spread of errors in slopes is minimal. Initial coordinates should be within a few thousand kilometers from the real location.
@@ -116,6 +117,7 @@ The resulting grid is a matrix with the columns: `lon` (longitude), `lat` (latit
 Here we create a complex object, which will be used in the main run. It incorporates all the objects, created at earlier steps: the light data with the detected twilight events (Proc.data), the spatial parameters (Grid), geographic coordinates of the initial location, where the tracking has started (start), and the calibration parameters (Calibration).
 
 ```{r, eval = F}
+# ~ 15 min run time
 all.in<-make.prerun.object(Proc.data, Grid, start=c(5.43, 52.93), Calibration=Calibration)
 ```
 ## 5. Run particle filter
@@ -129,6 +131,7 @@ Within the `run.particle.filter`, the following parameters can be defined:
 
 ```{r, eval = F}
 nParticles=1e6
+# ~ 45 min run time
 Result<-run.particle.filter(all.in, threads=-1,
             nParticles=nParticles, known.last=TRUE,
 		    precision.sd=25, check.outliers=F)
@@ -148,29 +151,28 @@ And now we estimate probabilities if being in the area for each twilight:
 Arrivals.NL<-find.times.distribution(Result,Index)
 Arrivals.NL
 ```
-## 7. Plotting the results
-
+## 7. Result summary and plots
+### Print summary on stationary and migration periods
+```{r, eval = F}
+stationary.migration.summary(Result, prob.cutoff = 0.1, min.stay = 3)
+```
 ### Plot a simple map
 ```{r, eval = F}
-
 map.FLightR.ggmap(Result)
-
 ```
 ### Plot lon lat graph
 ```{r, eval = F}
-
 plot_lon_lat(Result)
 ```
-
 ### Plot utilization distribution
 Plot space utilisation distribution for the wintering range 
-
 ```{r, eval = F}
 plot_util_distr(Result, 
     dates=data.frame(as.POSIXct('2013-12-01'), as.POSIXct('2014-01-31')),
     add.scale.bar=TRUE, percentiles=0.5)
 ```
-# References
+
+## References
 1. Ekstrom, P. (2004). An advance in geolocation by light. Memoirs of the National Insitute of Polar Research, Special Issue, 58, 210–226.<a id="ekstrom_2004"></a>
 1. Ekstrom, P. (2007). Error measures for template-fit geolocation based on light. Deep Sea Research Part II: Topical Studies in Oceanography, 54, 392–403.<a id="ekstrom_2007"></a>
 1. Lisovski, S., Hahn, S. & Hodgson, D. (2012a). GeoLight - processing and analysing light-based geolocator data in R. Methods in Ecology and Evolution, 3, 1055–1059.<a id="lisovski_2012b"></a>
