--- a/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
+++ b/examples/Black-Tailed_Godwit_FLightR_vignette/FLightR_analysis_workflow.Rmd
@@ -93,8 +93,8 @@ abline(v=as.POSIXct("2013-08-20")) # end of first calibration period
 abline(v=as.POSIXct("2014-05-05")) # start of the second calibration period
 ```
 ### Find calibration location for known calibration period
-When tagging happened in the High Arctic under polar day conditions or when bird moved away from the tagging site immedialtey after tagging and rood top calibration data are absent it is still possibe to obtain calibration parameters for a stationary period at unknown location. FLightR approach to this problem is similar to Hill-Ekstrom calibration [
-[Lisovski et al. 2012b](#lisovski_2012b) implemented in GeoLight [Lisovksi et al. 2012a](#lisovski_2012a). If bird is assumed to be stationary at some period one can try:
+When tagging happened in the High Arctic under polar day conditions or when bird moved away from the tagging site immedialtey after tagging and rood top calibration data are absent it is still possibe to obtain calibration parameters for a resident period at unknown location. FLightR approach to this problem is similar to Hill-Ekstrom calibration [
+[Lisovski et al. 2012b](#lisovski_2012b) implemented in GeoLight [Lisovksi et al. 2012a](#lisovski_2012a). If bird is assumed to be resident at some period one can try:
 ```{r, eval=FALSE}
 # ~ 15 min run time
 Location<-find.stationary.location(Proc.data, '2013-07-20', '2013-08-20', initial.coords=c(10, 50))
@@ -110,7 +110,7 @@ Grid<-make.grid(left=-14, bottom=30, right=13, top=57,
    distance.from.land.allowed.to.use=c(-Inf, Inf),
    distance.from.land.allowed.to.stay=c(-Inf, Inf))
 ```
-The resulting grid is a matrix with the columns: `lon` (longitude), `lat` (latitude) and `Stay` (probability of stay). The grid cells, which the bird presumably cannot use (e.g. locations over land for a marine fish), are excluded from the data, while the locations at which an animal cannot be stationary are given a low probability of stay. Using masks can side track model estimation to the local minima, so we recommend to initially run model without a mask, enable them for the second run and visually compare the results, to see if the model converges to a similar track.
+The resulting grid is a matrix with the columns: `lon` (longitude), `lat` (latitude) and `Stay` (probability of stay). The grid cells, which the animal presumably cannot use (e.g. locations over land for a marine animal), are excluded from the data, while the locations at which an animal cannot be stationary are given a low probability of stay. Using masks can side track model estimation to the local minima, so we recommend to initially run model without a mask, enable them for the second run and visually compare the results, to see if the model converges to a similar track.
 
 ## 4. Create proposal
 
@@ -122,7 +122,7 @@ all.in<-make.prerun.object(Proc.data, Grid, start=c(5.43, 52.93), Calibration=Ca
 ```
 ## 5. Run particle filter
 
-At this stage, results are calculated (coordinates, behavior, stationarity).
+At this stage, results are calculated (coordinates, behavior, probability of migration).
 Within the `run.particle.filter`, the following parameters can be defined: 
 * `nParticles` - number of particles (1e4 is recommended for test and 1e6 for the analysis);
 * `threads` - amount of parallel threads to use for the run default is -1 that means all available except one;
@@ -152,6 +152,7 @@ Arrivals.NL<-find.times.distribution(Result,Index)
 Arrivals.NL
 ```
 ## 7. Result summary and plots
+
 ### Print summary on stationary and migration periods
 ```{r, eval = F}
 stationary.migration.summary(Result, prob.cutoff = 0.1, min.stay = 3)
@@ -173,6 +174,7 @@ plot_util_distr(Result,
 ```
 
 ## References
+
 1. Ekstrom, P. (2004). An advance in geolocation by light. Memoirs of the National Insitute of Polar Research, Special Issue, 58, 210–226.<a id="ekstrom_2004"></a>
 1. Ekstrom, P. (2007). Error measures for template-fit geolocation based on light. Deep Sea Research Part II: Topical Studies in Oceanography, 54, 392–403.<a id="ekstrom_2007"></a>
 1. Lisovski, S., Hahn, S. & Hodgson, D. (2012a). GeoLight - processing and analysing light-based geolocator data in R. Methods in Ecology and Evolution, 3, 1055–1059.<a id="lisovski_2012b"></a>
